fix body wrap

--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -91,6 +91,9 @@ input[type="submit"] {
     margin-bottom: 15px;
 }
 
+.body-area {
+    white-space: pre-wrap;
+}
 
 
 
